@@ -1,5 +1,7 @@
 ﻿0.9.2
-. BusinessObjects - Merge generated and custom classes
+. BusinessObjects
+.. Merge generated and custom classes
+.. Clean up + finetuning
 
 0.9.1
 . BusinessObjects - StringLength attributes
